Try to fix math vertical alignment

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -57,3 +57,7 @@
   src: url("fonts/Tomorrow-Regular.ttf")
 }
 
+p .MathJax_SVG {
+  vertical-align: middle; 
+}
+
